# algorithms-in-c

./: .gitignore  CMakeLists.txt  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
include/: casting.h  linked_list.h  queue.h  stack.h  utils.h
src/: casting.c  linked_list.c  queue.c  stack.c  utils.c
tests/: CMakeLists.txt  test_casting.c  test_linked_list.c  test_stack.c  test_utils.c
